
MASTER

* 


* 2.2.4 (December 5th, 2008)

* Fix a type left in #views_real_column_name. Also cache #view_information lookups. [Ken Collins]


* 2.2.3 (December 5th, 2008)

* Changing back to using real table name in column_definitions. Makes sure views get back only the columns 
  that are defined for them with correct names, etc. Now supporting views by looking for NULL default and 
  then if table name is a view, perform a targeted with sub select to the real table name and column name 
  to find true default. [Ken Collins]

* Ensure that add_limit_offset! does not alter sub queries. [Erik Bryn]


2.2.2 (December 2nd, 2008)

* Add support for view defaults by making column_definitions use real table name for schema info. [Ken Collins]

* Include version in connection method and inspection. [Ken Collins]


2.2.1 (November 25th, 2008)

* Add identity insert support for views. Cache #views so that identity #table_name_or_views_table_name 
  will run quickly. [Ken Collins]

* Add views support. ActiveRecord classes can use views. The connection now has a #views method and 
  #table_exists? will not fall back to checking views too. [Ken Collins]


2.2.0 (November 21st, 2008)

* Release for rails 2.2.2. Many many changes.  [Ken Collins], [Murray Steele], [Shawn Balestracci], [Joe Rafaniello]
